--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ java {
 
 application {
     // Define the main class for the application.
-    mainClass = 'org.todobot.ToDoBotCLI'
+    mainClass = 'org.todobot.Main'
 }
 
 tasks.named('test') {
