--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,11 @@ dependencies {
     testImplementation libs.junit.jupiter
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
+    
+    // Mockito for unit testing
+    testImplementation 'org.mockito:mockito-core:5.18.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.18.0'
+    
     // This dependency is used by the application.
     implementation libs.guava
     
