--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@
 plugins {
     id 'application'
     id 'com.gradleup.shadow' version '8.3.7'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 repositories {
@@ -35,13 +36,18 @@ dependencies {
 // Apply a specific Java toolchain to ease working on different environments.
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(22)
+        languageVersion = JavaLanguageVersion.of(24)
     }
+}
+
+javafx {
+    version = "24.0.1"
+    modules = ['javafx.controls', 'javafx.fxml']
 }
 
 application {
     // Define the main class for the application.
-    mainClass = 'org.todobot.app.Main'
+    mainClass = 'org.todobot.app.Launcher'
 }
 
 tasks.named('test') {
